--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2799,6 +2799,218 @@ figure_list:
     caption: "Joseph Maclise, *Two Heads of Men, Showing Dissection of Muscles and Blood-Vessels of the Subclavian Region of the Chest* (detail), from Joseph Maclise, *Surgical Anatomy* (London: John Churchill, 1851): Plate 5, 1851, lithograph with watercolour, 54.5 × 37.7 cm. Wellcome Collection (no. 640714i)"
     credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
 
+  # Black Apollo: Aesthetics, Dissection, and Race in Joseph Maclise’s Surgical Anatomy
+
+  - id: "krhammerschlag-fig1"
+    label: "Figure 1"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig1.jpg"
+    caption: "Juan Valverde de Amusco, *Anatomia del corpo humano*, (Rome: Antonio Salamanca and Antonio Lafrerj, 1559), Plate 64, 1559, copper plate engraving. Collection of the National Library of Medicine, Bethesda, Maryland"
+    credit: "Digital image courtesy of National Library of Medicine, Bethesda, Maryland (public domain)"
+
+  - id: "krhammerschlag-fig2"
+    label: "Figure 2"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig2.jpg"
+    caption: "after Leochares, *Apollo Belvedere*, (Roman copy of Greek bronze original) , circa AD 120–140, marble, 224 cm. Collection of the Vatican Museums, Rome"
+    credit: "Digital image courtesy of Wikimedia Commons (CC BY-SA 4.0)"
+
+  - id: "krhammerschlag-fig3"
+    label: "Figure 3"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig3.jpg"
+    caption: "*The Dying Gaul*, first or second century AD Roman, marble, 93 cm. Collection of Musei Capitolini, Rome (inv. MC0747)"
+    credit: "Digital image courtesy of Karen Bleier/AFP via Getty Images (all rights reserved)"
+
+  - id: "krhammerschlag-fig4"
+    label: "Figure 4"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig4.jpg"
+    caption: "William Pink after Agostino Carlini, *Smugglerius*, circa 1834, plaster cast of 1776 original, 75.5 × 148.6 cm. Collection of the Royal Academy of Arts, London (03/1436)"
+    credit: "Digital image courtesy of Royal Academy of Arts, London. Photo: Paul Highnam (all rights reserved)"
+
+  - id: "krhammerschlag-fig5"
+    label: "Figure 5"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig5.jpg"
+    caption: "J.S. Cuthbert, *Front View of the Male Skeleton*, from John Marshall, *Anatomy for Artists, Illustrated by Two Hundred Original Drawings by J.S. Cuthbert, engraved by J. and G. Nicholls* (London: Smith, Elder and Co., 1878), 180, Fig. 64, 1878, engraving. Collection of University College London"
+    credit: "Digital image courtesy of Internet Archive (public domain)"
+
+  - id: "krhammerschlag-fig6"
+    label: "Figure 6"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig6.jpg"
+    caption: "J.S. Cuthbert, *Front View of the Female Skeleton*, from John Marshall, *Anatomy for Artists, Illustrated by Two Hundred Original Drawings by J.S. Cuthbert, engraved by J. and G. Nicholls* (London: Smith, Elder and Co., 1878), 185, Fig. 66, 1878, engraving. Collection of University College London"
+    credit: "Digital image courtesy of Internet Archive (public domain)"
+
+  - id: "krhammerschlag-fig7"
+    label: "Figure 7"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig7.jpg"
+    caption: "*7-Black_Apollo-maclise two heads one white one african-fig.7*,"
+    credit: ""
+
+  - id: "krhammerschlag-fig8"
+    label: "Figure 8"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig8.jpg"
+    caption: "Joseph Maclise, *Dissection of the Trunk of a Seated Black Man, Showing Major Blood-Vessels*, (London: John Churchill, 1851), 1851, coloured lithograph, 54.5 × 37.7 cm. Wellcome Collection (no. 640722i)"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig9"
+    label: "Figure 9"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig9.jpg"
+    caption: "Joseph Maclise, *Dissection of Muscles and Blood-Vessels of the Shoulder and Arm of a Seated Man*, (London: John Churchill, 1851), Plate 6, 1851, coloured lithograph, 54.5 × 37.7 cm. Wellcome Collection (no. 640715i)"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig10"
+    label: "Figure 10"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig10.jpg"
+    caption: "Joseph Maclise, *Dissection of the Left Groin of a Standing Man*, (London: John Churchill, 1851), Plate 16, 1851, coloured lithograph, 54.5 × 37.7 cm. Wellcome Collection (no. 640777i)"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig11"
+    label: "Figure 11"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig11.jpg"
+    caption: "Joseph Maclise, *Dissection of the Trunk of a Seated Man*, (London: John Churchill, 1851), Plate 12, 1851, coloured lithograph, 54.5 × 37.7 cm. Wellcome Collection (no. 640721i)"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig12"
+    label: "Figure 12"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig12.jpg"
+    caption: "*Belvedere Torso*, copy from the first century BC, marble, 159 cm. Collection of Musei Vaticani (INV. 1192)"
+    credit: "Digital image courtesy of Wikimedia Commons (CC BY-SA 3.0)"
+
+  - id: "krhammerschlag-fig13"
+    label: "Figure 13"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig13.jpg"
+    caption: "Joseph Maclise, *Dissection of the Trunk of a Seated White Man, Showing Major Blood-Vessels*, (London: John Churchill, 1851), 1851, coloured lithograph, 54.5 × 37.7 cm. Wellcome Collection (no. 640730i)"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig14"
+    label: "Figure 14"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig14.jpg"
+    caption: "William Hunter, *Anatomia uteri humani gravidi tabulis illustrata ...The Anatomy of the Human Gravid Uterus Exhibited in Figures, Table VI: The Child in the Womb, in its Natural Situation*, (Birmingham: J. Baskerville, & S. Baker & G. Leigh, etc., London, 1774), Table 6, 1774, lithograph. Wellcome Collection"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig15"
+    label: "Figure 15"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig15.jpg"
+    caption: "William Hogarth, *The Reward of Cruelty (The Four Stages of Cruelty)*, 1 February 1751, etching and engraving, 37.8 × 31.8 cm. Collection of The Metropolitan Museum of Art, New York, 32.35(121)"
+    credit: "Digital image courtesy of The Metropolitan Museum of Art, New York (public domain)"
+
+  - id: "krhammerschlag-fig16"
+    label: "Figure 16"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig16.jpg"
+    caption: "Friedrich Tiedemann, *Plates of the Arteries of the Human Body, after Frederic Tiedemann, engraved by E. Mitchell*, *under the superintendency of Thomas Wharton Jones, explanatory references translated from the original Latin, with additional notes by Dr Knox* (Edinburgh: Printed for MacLachlan & Stewart, 1829), Plate 18, 1829, engraving. Wellcome Collection"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig17"
+    label: "Figure 17"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig17.jpg"
+    caption: "Unidentified maker, attributed to William Hunter, *Écorché figure*, probably 1771, plaster cast, 171.5 × 61 cm. Collection of the Royal Academy of Arts, London (03/1435)"
+    credit: "Digital image courtesy of Royal Academy of Arts, London. Photo: Paul Highnam (all rights reserved)"
+
+  - id: "krhammerschlag-fig18"
+    label: "Figure 18"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig18.jpg"
+    caption: "Joseph Maclise, *Surgical Anatomy*, 2nd edn (London: John Churchill, 1856), Plate 4. Collection of the National Library of Medicine, Bethesda, Maryland"
+    credit: "Digital image courtesy of National Library of Medicine, Bethesda, Maryland (public domain)"
+
+  - id: "krhammerschlag-fig19"
+    label: "Figure 19"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig19.jpg"
+    caption: "Joseph Maclise, *Surgical Anatomy*, 2nd edn (London: John Churchill, 1856), Plate 24. Collection of the National Library of Medicine, Bethesda, Maryland"
+    credit: "Digital image courtesy of National Library of Medicine, Bethesda, Maryland (public domain)"
+
+  - id: "krhammerschlag-fig20"
+    label: "Figure 20"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig20.jpg"
+    caption: "Joseph Maclise, *Dissection of the Abdomen and Thigh of a Standing Man, Showing Major Blood-Vessels*, (London: John Churchill, 1851), Plate 25, 1851, coloured lithograph, 54.5 × 37.7 cm. Wellcome Collection (no. 640789i)"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig21"
+    label: "Figure 21"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig21.jpg"
+    caption: "Joseph Maclise, *Two Heads of Men*, from *Surgical Anatomy* (Philadelphia, PA: Blanchard and Lea, 1851), Plates 9 and 10, 1851, coloured lithograph, 38 cm. Collection of Georgetown University Library, Washington, DC"
+    credit: "Digital image courtesy of Getty Research Institute / Internet Archive (public domain)"
+
+  - id: "krhammerschlag-fig22"
+    label: "Figure 22"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig22.jpg"
+    caption: "Joseph Maclise, *Dissection of the Trunk of a Seated White Man, Showing Major Blood-Vessels*, from *Surgical Anatomy* (Philadelphia, PA: Blanchard and Lea, 1851), Plate 25, 1851, coloured lithograph, 38 cm. Collection of Georgetown University Library, Washington, DC"
+    credit: "Digital image courtesy of Getty Research Institute / Internet Archive (public domain)"
+
+  - id: "krhammerschlag-fig23"
+    label: "Figure 23"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig23.jpg"
+    caption: "Charles Bell, *Engravings of the Arteries, Illustrating the Second Volume of The Anatomy of the Human Body, and Serving as an introduction to The Surgery of the Arteries*, (London: Printed for Longman, Hurst, Rees, Orme, and Brown [etc.], 1811), 1811, engraving. Wellcome Collection"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig24"
+    label: "Figure 24"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig24.jpg"
+    caption: "Charles Bell, *Illustrations of the Great Operations of Surgery, Trepan, Hernia, Amputation, Aneurism, and Lithotomy*, (London: Longman, 1821), Plate 2, 1821, engraving. Wellcome Collection"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig25"
+    label: "Figure 25"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig25.jpg"
+    caption: "J.C. Nott and George R. Gliddon, *Types of Mankind, or, Ethnological Researches, Based Upon the Ancient Monuments, Paintings, Sculptures, and Crania of Races, and Upon their Natural, Geographical, Philological and Biblical History*, (Philadelphia, PA: J.B. Lippincott, 1860), Figs. 339–344, 1860, engraving. Wellcome Collection"
+    credit: "Digital image courtesy of Wellcome Collection (CC BY 4.0)"
+
+  - id: "krhammerschlag-fig26"
+    label: "Figure 26"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig26.jpg"
+    caption: "John Downman, *Thomas Williams, a Black Sailor*, 1815, chalk and graphite on paper, 32.3 × 29.7 cm. Collection of Tate (T10168)"
+    credit: "Digital image courtesy of Tate (CC-BY-NC-ND 3.0)"
+
+  - id: "krhammerschlag-fig27"
+    label: "Figure 27"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig27.jpg"
+    caption: "Thomas Jones Baker,, *The Secret of England’s Greatness (Queen Victoria presenting a Bible in the Audience Chamber of Windsor)*, circa 1862–1863, oil on canvas, 167.6 × 213.8 cm. Collection of the National Portrait Gallery, London (NPG 4969)"
+    credit: "Digital image courtesy of National Portrait Gallery, London (CC BY-NC-ND 3.0)"
+
+  - id: "krhammerschlag-fig28"
+    label: "Figure 28"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig28.jpg"
+    caption: "John Boyne, *A Meeting of Connoisseurs*, circa 1790–1807, watercolour on paper, 41.3 × 55.5 cm. Collection of the Victoria & Albert Museum, London (1703–1871)"
+    credit: "Digital image courtesy of Victoria & Albert Museum, London (CC BY-NC-ND 3.0)"
+
+  - id: "krhammerschlag-fig29"
+    label: "Figure 29"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig29.jpg"
+    caption: "Hendrick Goltzius, *The Farnese Hercules*, circa 1592, engraving, 41.8 × 30 cm. Collection of the Victoria & Albert Museum, London (29408A/1)"
+    credit: "Digital image courtesy of Victoria & Albert Museum, London (CC BY-NC-ND 3.0)"
+
+  - id: "krhammerschlag-fig30"
+    label: "Figure 30"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig30.jpg"
+    caption: "Théodore Géricault, *The Raft of the Medusa*, 1818–19, oil on canvas, 490 cm × 716 cm. Collection of The Louvre, Paris (INV 4884)"
+    credit: "Digital image courtesy of Wikimedia Commons (public domain)"
+
+  - id: "krhammerschlag-fig31"
+    label: "Figure 31"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig31.jpg"
+    caption: "Daniel Maclise, *The Death of Nelson (finished study)*, 1859–1864, oil on canvas, 98.5 × 353 cm. Collection of the Walker Art Gallery, Liverpool (WAG 2116)"
+    credit: "Digital image courtesy of Walker Art Gallery, Liverpool (public domain)"
+
+  - id: "krhammerschlag-fig32"
+    label: "Figure 32"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig32.jpg"
+    caption: "Théodore Géricault, *Les Boxeurs (Boxers)*, 1818, lithograph, 38.5 × 45 cm. Collection of The Metropolitan Museum of Art, New York (22.63.28)"
+    credit: "Digital image courtesy of The Metropolitan Museum of Art, New York (public domain)"
+
+  - id: "krhammerschlag-fig33"
+    label: "Figure 33"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig33.jpg"
+    caption: "William Etty, *The Wrestlers*, circa 1840, oil on millboard, 68.5 × 53.3 cm. Collection of York Art Gallery (YORAG : 89)"
+    credit: "Digital image courtesy of York Art Gallery (public domain)"
+
+  - id: "krhammerschlag-fig34"
+    label: "Figure 34"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig34.jpg"
+    caption: "Isaac Taylor after Francis Eginton, Title-page from J. Bicknell and T. Day, *The Dying Negro*, *a Poem* (London: W. Flexney/G.&T. Wilkie/James Robson, 1775), 1775, etching and engraving, 13.6 × 15 cm. Collection of The British Museum (1895,1031.222)"
+    credit: "Digital image courtesy of Trustees of The British Museum (CC BY-NC-SA 4.0)"
+
+  - id: "krhammerschlag-fig35"
+    label: "Figure 35"
+    src: "figures/issue-20/krhammerschlag/krhammerschlag-fig35.jpg"
+    caption: "George Cooke, *Slave on Deck*, 1793, pen and wash, 15.8 × 9.6 cm. Collection of the National Maritime Museum, London (ZBA2660)"
+    credit: "Digital image courtesy of National Maritime Museum, London (all rights reserved)"
+
 
 #   Issue 22
 
