--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "predev": "del-cli public",
     "preserve": "npm run clean",
     "serve": "cross-env ELEVENTY_ENV=production eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eleventy_es_update": "node ./_plugins/elasticSearch/eleventy_es_update.js"
   },
   "imports": {
     "#root/*": "./*",
@@ -44,8 +45,11 @@
     "#plugins/*": "./_plugins/*"
   },
   "dependencies": {
+    "all": "^0.0.0",
     "bulma": "^0.9.3",
     "core-js": "2.5.0",
+    "dotenv": "^16.3.1",
+    "elasticsearch": "^16.7.3",
     "lit": "^2.6.1",
     "lunr": "^2.3.9",
     "template-polyfill": "^2.0.0"
