--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "#plugins/*": "./_plugins/*"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.10.0",
     "bulma": "^0.9.3",
     "core-js": "2.5.0",
     "dotenv": "^16.3.1",
-    "elasticsearch": "^16.7.3",
     "lit": "^2.6.1",
     "lunr": "^2.3.9",
     "template-polyfill": "^2.0.0"
